--- a/front-side/home/css/home.css
+++ b/front-side/home/css/home.css
@@ -12,6 +12,7 @@ body {
   font-size: 1.6rem;
   line-height: 1.5;
   color: #fff;
+  background-color: #222;
 }
 
 .write-tweet {
@@ -45,11 +46,13 @@ body {
   background: url(../images/photo1637945168\(3\).png);
   background-size: cover;
   height: 100px;
-  width: 17%;
+  width: 16%;
   height: 100vh;
   display: flex;
   flex-direction: column;
   padding: 0 10px;
+  position: fixed;
+  z-index: 1;
 }
 .home-page-access a {
   display: flex;
@@ -59,7 +62,7 @@ body {
   color: #fff;
 }
 .home-page-access a:not(:first-child) {
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   margin-left: 10px;
 }
 .home-page-access a img {
@@ -71,17 +74,30 @@ body {
 .home-page-access__logo img {
   height: 52px;
 }
+.home-page-access__button {
+  background-color: #fff;
+  font-weight: 500;
+  font-size: 1.6rem;
+  width: 80%;
+  margin-top: 150px;
+  align-self: center;
+  line-height: 2;
+  padding: 6px;
+  border-radius: 24px;
+  border: none;
+}
 .home-page-body {
   width: 83%;
+  margin-left: auto;
 }
 .home-page-header {
   background: url(../images/photo1637945168\(1\).png);
   background-size: cover;
-  width: auto;
-  height: 7.5%;
+  height: 75px;
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin-left: auto;
   justify-content: space-around;
 }
 .home-page-header a {
@@ -133,7 +149,6 @@ body {
 .home-page-main__picture {
   width: 100%;
 }
-<<<<<<< HEAD
 .home-page-main__body {
   position: absolute;
   top: 329px;
@@ -326,8 +341,6 @@ body {
   align-self: center;
   margin-top: auto;
 }
-=======
->>>>>>> refs/remotes/origin/front-end
 
 .container-login100-form-btn {
   display: -webkit-box;
