--- a/front-side/home/css/normilize.css
+++ b/front-side/home/css/normilize.css
@@ -37,6 +37,10 @@ main {
    * `article` contexts in Chrome, Firefox, and Safari.
    */
 
+p {
+  margin: 0;
+}
+
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
